[package]
name = "enx-wasm-parser"
version = "0.2.0"
edition = "2021"
description = "Parse Teledyne RDI PD0/ENX acoustic data files via Rust/WebAssembly"
license = "MIT"
repository = "https://github.com/AmirhosseinAzimyzadeh/enx-wasm-parser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
